# newsr

./: .gitignore  AGENTS.md  README.md  newsr.sh  providers_todo.md  pyproject.toml
docs/: add_provider.md  architecture.md  configuration.md  current_providers.md  topic_watch.md
src/newsr/: __init__.py  cancellation.py  runtime_logging.py  scheduling.py  ui_text.py
tests/: conftest.py  test_scheduling.py  test_ui_text.py
tests/brief/: test_brief_service.py
tests/config/: test_bootstrap.py  test_loader.py
tests/export/: test_markdown_layout.py  test_service.py
tests/fixtures/: arstechnica_article.html  arstechnica_section.html  article.html  canarymedia_article_grid_storage_goal.html  canarymedia_listing_grid_edge.html  categories.html  deloitteinsights_article_thriving_in_midst_leadership_tension_uncertainty.html  deloitteinsights_article_tracking_financial_stress_metrics.html  deloitteinsights_research_hub_economics.html  deloitteinsights_search_business_strategy_growth.json  edsurge_article.html  edsurge_listing_k12.html  hbr_article_digital.html  hbr_article_unusable.html  hbr_listing_leadership.html  hrdive_article.html  hrdive_listing_talent.html  hyperallergic_article.html  hyperallergic_listing_news.html  infoq_article_configuration_control_plane.html  infoq_listing_cloud_architecture.html  infoq_news_cloudflare_custom_regions.html  lawfare_article_spyware.html  lawfare_listing_surveillance_privacy.html  marketingdive_article.html  marketingdive_listing_social_media.html  medcitynews_article.html  medcitynews_listing_health_tech.html  section.html  (+14 more)
(+193 files in other folders)
